--- a/catch/抓取指导.md
+++ b/catch/抓取指导.md
@@ -6,6 +6,8 @@
 - 建议使用 `npm`（含 `tsx`）、`curl`、`rg` 等工具，保证命令与脚本可直接运行。
 - 在 `catch/` 目录下创建 `<slug>/` 的工作区：存放原始 HTML (`menu_top.html`、`menu_entry.html`、`entry/*.html|.png` 等) 与抓取摘要。
 - 凡是从 Wayback Machine 获取的资源，都要记录其快照 URL，确保后续可复现。
+- 目标清单：统一在 `catch/festival-urls.json` 维护每个祭典的 `slug`、名称与入口 URL；抓取脚本/手工流程默认以此为来源，不再另行询问 `slug`。
+- 进度记录：统一在 `catch/festival-scrape-status.md` 以 `[ ]`/`[x]` 维护未完成/完成状态，必要时在同一行补充简要备注；开始、完成或回退时仅更新该文件即可。
 
 ## 站点链路确认
 1. **首页/Banner**：从 Wayback Machine 或现存镜像打开祭典首页（示例：`https://web.archive.org/.../index.html` → `menu_top.html`）。
@@ -101,7 +103,6 @@ npx tsx scripts/scrape-2010-kouhaku.ts
 - 更新 `catch/festival-scrape-status.md` 标记进度，必要时附上本次抓取的改动说明。
 
 按照以上步骤，可以稳定复刻 2010 红白的流程，并快速迁移到其他祭典站点。
-
 
 
 
