--- a/catch/抓取指导.md
+++ b/catch/抓取指导.md
@@ -10,20 +10,20 @@
 - 进度记录：统一在 `catch/festival-scrape-status.md` 以 `[ ]`/`[x]` 维护未完成/完成状态，必要时在同一行补充简要备注；开始、完成或回退时仅更新该文件即可。
 
 ## 通用抓取约束
-- 页面抓取一律通过 Jina Reader 代理，使用 `https://r.jina.ai/<scheme>://<host>/<path>` 前缀，不直接请求源站页面（含镜像与 Wayback）。
+- 页面抓取默认通过 Jina Reader 代理获取源站与镜像页面，使用 `https://r.jina.ai/<scheme>://<host>/<path>` 前缀；Wayback 页面因被屏蔽，需直连 `web.archive.org`（不经 `r.jina.ai`）。
 - 目的：去除 Referer、副作用脚本与不稳定重定向，统一超时与缓存，提升可复现性与对比性。
 - 二进制资产（图标/截图/压缩包）仍按原始直链获取；若站点存在防盗链，继续采用“移除 Referer”的策略，仅在 `content-type` 以 `image/` 等二进制前缀时写入资产。
 - 例：
   - 源站页面 `https://vipkouhaku2024.x.2nt.com/menu_entry.html` → `https://r.jina.ai/https://vipkouhaku2024.x.2nt.com/menu_entry.html`
-  - Wayback 页面 `https://web.archive.org/web/20101231235959/http://example.com/entry/1.html` → `https://r.jina.ai/https://web.archive.org/web/20101231235959/http://example.com/entry/1.html`
-  - 对经由 `r.jina.ai` 获取的页面内容，按快照原样保存至 `catch/` 目录用于复查；如遇解析异常确需直连，请在 summary 中注明原因与来源。
+  - Wayback 页面 `https://web.archive.org/web/20101231235959/http://example.com/entry/1.html` → 直连 `https://web.archive.org/web/20101231235959/http://example.com/entry/1.html`（不要加 `r.jina.ai`）
+  - 对经由 `r.jina.ai` 获取的页面内容按快照原样保存至 `catch/` 目录用于复查；Wayback 页面直连获取并同样保存。如遇解析异常确需其他直连，请在 summary 中注明原因与来源。
 
 ## 站点链路确认
 1. **首页/Banner**：从 Wayback Machine 或现存镜像打开祭典首页（示例：`https://web.archive.org/.../index.html` → `menu_top.html`）。
  - 只使用页面上真实存在的链接，禁止猜测路径。
  - Banner 下载后放入 `public/banners/<slug>.<ext>`，并在 summary 里记录来源快照。
 2. **作品列表页**：按照首页导航找到作品列表（例：`index.html` → `index_entry.html` → `menu_entry.html`）。
- - 将页面快照保存到 `catch/menu_entry.html`（默认通过 `https://r.jina.ai/` 拉取）。
+ - 将页面快照保存到 `catch/menu_entry.html`（默认通过 `https://r.jina.ai/` 拉取；Wayback 直连）。
  - 列表中出现的所有链接、图标路径都要记录，后续按编号逐条抓取。
 3. **作品详情页**：列表中的每个链接必须通过语义分析确认指向 `entry/<no>.html`。
  - 每获取一级页面，都要基于页面真实 href 构建下一级 URL。
@@ -112,7 +112,6 @@ npx tsx scripts/scrape-2010-kouhaku.ts
 - 更新 `catch/festival-scrape-status.md` 标记进度，必要时附上本次抓取的改动说明。
 
 按照以上步骤，可以稳定复刻 2010 红白的流程，并快速迁移到其他祭典站点。
-
 
 
 
